restrict who can make blog post

--- a/ablog/myblog/templates/add_post.html
+++ b/ablog/myblog/templates/add_post.html
@@ -12,6 +12,15 @@
         {{ form.as_p }}
         <button class="btn btn-secondary">Додати</button>
 </div>
-{% endif %}
+<script>
+        var name = "{{ user.id }}";
+        document.getElementById("elder").value = name;
+
+</script>
+
+{% else %}
 Ви не маєте доступу до даної сторінки
+
+{% endif %}
+
 {% endblock %}
