--- a/ablog/myblog/templates/article_details.html
+++ b/ablog/myblog/templates/article_details.html
@@ -7,11 +7,11 @@
 <small>By: {{ post.author }} -
     {{ post.post_date }}
     {% if user.is_authenticated %}
-        {% if user.id == post.author.id %}
-            -
-            <a href="{% url 'update_post' post.pk %}">(Edit)</a>
-            <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
-        {% endif %}
+    {% if user.id == post.author.id %}
+    -
+    <a href="{% url 'update_post' post.pk %}">(Edit)</a>
+    <a href="{% url 'delete_post' post.pk %}">(Delete)</a>
+    {% endif %}
     {% endif %}
 </small>
 <br/>
@@ -21,4 +21,15 @@
 
 <br/><br/>
 <a href="{% url 'home' %}" class="btn btn-secondary">На головну</a>
+
+<br/><br/>
+<hr>
+<br/>
+<form action="{% url 'like_post' post.pk %}" method="POST">
+    {% csrf_token %}
+    <button type="submit" ,
+            name="post_id" ,
+            value="{{ post.id }}" ,
+            class="btn btn-primary btn-sm">Like</button> - {{ total_likes }} Likes
+</form>
 {% endblock %}
