created blog unlike button

--- a/ablog/members/templates/registration/register.html
+++ b/ablog/members/templates/registration/register.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} Create a new blog post {% endblock %}
+{% block title %} Зареєструватися {% endblock %}
 {% block content %}
 
 
