--- a/ablog/members/templates/registration/login.html
+++ b/ablog/members/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} Create a new blog post {% endblock %}
+{% block title %} Увійти {% endblock %}
 {% block content %}
 
 
